--- a/index.html
+++ b/index.html
@@ -4,211 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
   <title>Taveberries — цветы и подарки</title>
-  <script src="https://telegram.org/js/telegram-web-app.js"></script>
-  <style>
-    :root {
-      --bg: #ffffff;
-      --text: #000000;
-      --hint: #8a8a8e;
-      --gray: #f5f5f5;
-      --light: #e5e5e5;
-      --accent: #6c5ce7;       /* фиолетовый как у Wildberries */
-      --accent-dark: #5649c0;
-      --danger: #ff3b30;
-      --success: #34c759;
-    }
-    [data-theme="dark"] {
-      --bg: #0f0f0f;
-      --text: #ffffff;
-      --hint: #8e8e93;
-      --gray: #1c1c1e;
-      --light: #2c2c2e;
-    }
-    * { margin:0; padding:0; box-sizing:border-box; }
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-      background: var(--bg);
-      color: var(--text);
-      min-height: 100vh;
-      padding-bottom: 80px;
-    }
-    header {
-      position: fixed;
-      top: 0; left: 0; right: 0;
-      height: 54px;
-      background: var(--bg);
-      border-bottom: 1px solid var(--light);
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 0 16px;
-      z-index: 100;
-      font-size: 18px;
-      font-weight: 600;
-    }
-    .logo { color: var(--accent); letter-spacing: -0.5px; }
-    .search {
-      margin: 62px 16px 16px;
-      position: relative;
-    }
-    .search input {
-      width: 100%;
-      padding: 12px 16px 12px 44px;
-      background: var(--gray);
-      border: 1px solid var(--light);
-      border-radius: 12px;
-      font-size: 16px;
-      color: var(--text);
-    }
-    .search::before {
-      content: "🔍";
-      position: absolute;
-      left: 16px; top: 50%;
-      transform: translateY(-50%);
-      color: var(--hint);
-      font-size: 18px;
-    }
-    .promo {
-      margin: 0 16px 20px;
-      height: 160px;
-      background: linear-gradient(135deg, var(--accent), #a29bfe);
-      border-radius: 16px;
-      color: white;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      font-size: 22px;
-      font-weight: 700;
-      text-align: center;
-      box-shadow: 0 4px 12px rgba(108,92,231,0.3);
-    }
-    .promo small { font-size: 14px; opacity: 0.9; margin-top: 8px; }
-    .section-title {
-      padding: 0 16px;
-      margin: 24px 0 12px;
-      font-size: 19px;
-      font-weight: 700;
-    }
-    .products {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(172px, 1fr));
-      gap: 12px;
-      padding: 0 16px;
-    }
-    .card {
-      background: var(--bg);
-      border-radius: 12px;
-      overflow: hidden;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.07);
-      transition: transform 0.15s;
-    }
-    .card:active { transform: scale(0.97); }
-    .card-img {
-      width: 100%;
-      aspect-ratio: 1 / 1.15;
-      object-fit: cover;
-      background: var(--gray);
-    }
-    .card-body { padding: 10px 10px 14px; }
-    .card-title {
-      font-size: 14px;
-      line-height: 1.38;
-      min-height: 38px;
-      overflow: hidden;
-      display: -webkit-box;
-      -webkit-line-clamp: 2;
-      -webkit-box-orient: vertical;
-    }
-    .price-row {
-      margin: 6px 0 8px;
-      display: flex;
-      align-items: baseline;
-      gap: 8px;
-      flex-wrap: wrap;
-    }
-    .price { font-size: 17px; font-weight: 700; color: var(--accent); }
-    .old-price { font-size: 13px; color: var(--hint); text-decoration: line-through; }
-    .discount {
-      background: var(--danger);
-      color: white;
-      font-size: 11px;
-      font-weight: 600;
-      padding: 2px 6px;
-      border-radius: 4px;
-    }
-    .add-to-cart {
-      background: var(--accent);
-      color: white;
-      border: none;
-      width: 100%;
-      padding: 10px;
-      border-radius: 10px;
-      font-size: 15px;
-      font-weight: 600;
-      cursor: pointer;
-      transition: background 0.2s;
-    }
-    .add-to-cart:active { background: var(--accent-dark); }
-    .bottom-nav {
-      position: fixed;
-      bottom: 0; left: 0; right: 0;
-      height: 64px;
-      background: var(--bg);
-      border-top: 1px solid var(--light);
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
-      z-index: 100;
-      font-size: 11px;
-      color: var(--hint);
-    }
-    .nav-item { text-align: center; position: relative; }
-    .nav-item.active { color: var(--accent); font-weight: 600; }
-    .badge {
-      position: absolute;
-      top: -6px; right: -12px;
-      background: var(--accent);
-      color: white;
-      font-size: 10px;
-      font-weight: 700;
-      min-width: 18px; height: 18px;
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 0 4px;
-    }
-    #cart-page { display: none; padding: 70px 16px 100px; }
-    .cart-item {
-      display: flex;
-      background: var(--gray);
-      border-radius: 12px;
-      margin-bottom: 12px;
-      padding: 12px;
-      gap: 12px;
-      align-items: center;
-    }
-    .cart-img { width: 80px; height: 80px; object-fit: cover; border-radius: 8px; }
-    .cart-info { flex: 1; }
-    .cart-total {
-      font-size: 20px;
-      font-weight: 700;
-      margin: 24px 0 16px;
-      text-align: right;
-    }
-    .checkout-btn {
-      background: var(--success);
-      color: white;
-      border: none;
-      width: 100%;
-      padding: 16px;
-      border-radius: 12px;
-      font-size: 18px;
-      font-weight: 700;
-      cursor: pointer;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body data-theme="light">
 
@@ -234,126 +30,20 @@
     <div class="section-title">Корзина</div>
     <div id="cart-items"></div>
     <div class="cart-total" id="cart-total">Итого: 0 AED</div>
-    <button class="checkout-btn" onclick="tg.showPopup({title:'Оформление',message:'Переход к оплате...',buttons:[{type:'ok'}]})">
-      Оформить заказ
-    </button>
+    <button class="checkout-btn" id="checkout-btn">Оформить заказ</button>
   </div>
 
   <div class="bottom-nav">
-    <div class="nav-item active" onclick="showMain()">Главная</div>
-    <div class="nav-item" onclick="alert('Каталог — скоро')">Каталог</div>
-    <div class="nav-item" onclick="showCart()">
+    <div class="nav-item active" data-page="main">Главная</div>
+    <div class="nav-item" data-page="catalog">Каталог</div>
+    <div class="nav-item" data-page="cart">
       Корзина
       <span class="badge" id="cart-badge">0</span>
     </div>
-    <div class="nav-item" onclick="alert('Личный кабинет')">Я</div>
+    <div class="nav-item" data-page="profile">Я</div>
   </div>
 
-  <script>
-    const tg = window.Telegram.WebApp;
-    tg.ready();
-    tg.expand();
-
-    // Токен твоего бота от BotFather
-    const BOT_TOKEN = "8539575626:AAEPT8-pVxqOxKtQ919N61LkdseYcf6r57I";
-
-    // Адаптация под тёмную/светлую тему Telegram
-    if (tg.colorScheme === 'dark') {
-      document.body.dataset.theme = 'dark';
-    }
-
-    let cart = [];
-
-    function updateCartUI() {
-      const count = cart.length;
-      document.getElementById('cart-count').textContent = count;
-      document.getElementById('cart-badge').textContent = count;
-
-      const itemsEl = document.getElementById('cart-items');
-      itemsEl.innerHTML = '';
-      let total = 0;
-
-      cart.forEach((item, idx) => {
-        total += item.price;
-        const div = document.createElement('div');
-        div.className = 'cart-item';
-        div.innerHTML = `
-          <img class="cart-img" src="${item.img}" alt="${item.name}">
-          <div class="cart-info">
-            <div style="font-weight:600">${item.name}</div>
-            <div style="color:var(--accent);margin:4px 0">${item.price} AED</div>
-            <small style="color:var(--hint)">1 × ${item.price} AED</small>
-          </div>
-          <button onclick="removeFromCart(${idx})" style="background:none;border:none;color:var(--danger);font-size:24px;font-weight:bold">×</button>
-        `;
-        itemsEl.appendChild(div);
-      });
-
-      document.getElementById('cart-total').textContent = `Итого: ${total} AED`;
-    }
-
-    function addToCart(product) {
-      cart.push(product);
-      updateCartUI();
-      tg.HapticFeedback.impactOccurred('medium');
-      tg.showPopup({
-        title: "Добавлено в корзину!",
-        message: `${product.name}\n${product.price} AED`,
-        buttons: [{type:"ok"}]
-      });
-    }
-
-    function removeFromCart(index) {
-      cart.splice(index, 1);
-      updateCartUI();
-    }
-
-    function showMain() {
-      document.getElementById('products').style.display = 'grid';
-      document.getElementById('cart-page').style.display = 'none';
-      document.querySelectorAll('.nav-item')[0].classList.add('active');
-      document.querySelectorAll('.nav-item')[2].classList.remove('active');
-    }
-
-    function showCart() {
-      document.getElementById('products').style.display = 'none';
-      document.getElementById('cart-page').style.display = 'block';
-      document.querySelectorAll('.nav-item')[0].classList.remove('active');
-      document.querySelectorAll('.nav-item')[2].classList.add('active');
-      updateCartUI();
-    }
-
-    // Примеры товаров (замени фото и названия на свои)
-    const productsData = [
-      { id:1, name: "Букет 51 красная роза", price: 399, old: 599, img: "https://images.unsplash.com/photo-1525310072745-f49212b5ac6d?w=600" },
-      { id:2, name: "Розы в коробке микс 25 шт", price: 249, old: 349, img: "https://images.unsplash.com/photo-1585487000160-6ebcfceb0d26?w=600" },
-      { id:3, name: "Премиум орхидея в коробке", price: 179, img: "https://images.unsplash.com/photo-1610479577743-3e4d3c3c3e3c?w=600" },
-      { id:4, name: "Нежный букет пионов", price: 449, old: 599, img: "https://images.unsplash.com/photo-1526045478516-99145907023c?w=600" },
-      { id:5, name: "Букет 101 роза Эквадор", price: 899, old: 1299, img: "https://images.unsplash.com/photo-1562692500-5d1361d0a0c0?w=600" },
-      { id:6, name: "Подарок: цветы + вино", price: 299, old: 399, img: "https://images.unsplash.com/photo-1600585154340-be6161a56a0c?w=600" }
-    ];
-
-    const productsEl = document.getElementById('products');
-    productsData.forEach(p => {
-      const card = document.createElement('div');
-      card.className = 'card';
-      card.innerHTML = `
-        <img class="card-img" src="${p.img}" alt="${p.name}">
-        <div class="card-body">
-          <div class="card-title">${p.name}</div>
-          <div class="price-row">
-            <span class="price">${p.price} AED</span>
-            ${p.old ? `<span class="old-price">${p.old} AED</span><span class="discount">-${Math.round((p.old - p.price)/p.old*100)}%</span>` : ''}
-          </div>
-          <button class="add-to-cart">В корзину</button>
-        </div>
-      `;
-      card.querySelector('.add-to-cart').onclick = () => addToCart(p);
-      productsEl.appendChild(card);
-    });
-
-    // Старт — главная страница
-    showMain();
-  </script>
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
